feat(summary-ui): se terminó de diseñar el apartado de cv integrado en el portafolio

--- a/index.html
+++ b/index.html
@@ -309,36 +309,32 @@
                             </ul>
                         </div>
                         <div class="resume-item">
-                            <h4>Senior graphic design specialist</h4>
-                            <h5>2019 - Present</h5>
-                            <p><em>Experion, New York, NY </em></p>
+                            <h4>Desarrollador frontend Angular</h4>
+                            <h5>2021 - 2022</h5>
+                            <p><em>El Buen Tono, Córdoba, Ver.</em></p>
                             <ul>
-                                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                                <li>Implementación de una aplicación web para el control y gestión de vendedores, ventas y distribución.</li>
+                                <li>Implementación de sistemas de seguridad web basados en tokens.</li>
                             </ul>
                         </div>
                         <div class="resume-item">
-                            <h4>Senior graphic design specialist</h4>
-                            <h5>2019 - Present</h5>
-                            <p><em>Experion, New York, NY </em></p>
+                            <h4>Desarrollador Android Java</h4>
+                            <h5>2019 - 2020</h5>
+                            <p><em>Auto partes Ramirez, Fortín de las Flores, Ver. </em></p>
                             <ul>
-                                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                                <li>Implementación de una aplicación móvil para la gestión de inventarios.</li>
+                                <li>Control del área de ventas, mermas y salidas.</li>
+                                <li>Gestión de productos y proveedores.</li>
                             </ul>
                         </div>
                         <div class="resume-item">
-                            <h4>Senior graphic design specialist</h4>
-                            <h5>2019 - Present</h5>
-                            <p><em>Experion, New York, NY </em></p>
+                            <h4>Desarrollador .NET</h4>
+                            <h5>2019 - 2019</h5>
+                            <p><em>Industrias Wald, Córdoba, Ver.</em></p>
                             <ul>
-                                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                                <li>Diseño e implementación de un sistema para Recursos Humanos.</li>
+                                <li>Gestión de la información de cada empleado.</li>
+                                <li>Control de permisos e historial de cada uno.</li>
                             </ul>
                         </div>
                     </div>
@@ -353,47 +349,33 @@
                             </ul>
                         </div>
                         <div class="resume-item">
-                            <h4>Graphic design specialist</h4>
-                            <h5>2017 - 2018</h5>
-                            <p><em>Stepping Stone Advertising, New York, NY</em></p>
+                            <h4>Desarrollador Android Java</h4>
+                            <h5>2021 - 2022</h5>
+                            <p><em>El Buen Tono, Córdoba, Ver.</em></p>
                             <ul>
-                                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                                <li>Implemntación de una aplicación móvil para la gestión de ventas.</li>
+                                <li>Control de la distribución de periódico El Buen Tono.</li>
+                                <li>Sistema de autentificación basado en tokens.</li>
                             </ul>
                         </div>
                         <div class="resume-item">
-                            <h4>Graphic design specialist</h4>
-                            <h5>2017 - 2018</h5>
-                            <p><em>Stepping Stone Advertising, New York, NY</em></p>
+                            <h4>Desarrollador fronted angular</h4>
+                            <h5>2019 - 2020</h5>
+                            <p><em>Auto partes Ramirez, Fortín de las Flores, Ver.</em></p>
                             <ul>
-                                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                                <li>Implementación de una aplicación móvil para la gestión de inventarios.</li>
+                                <li>Control del área de ventas, mermas y salidas.</li>
+                                <li>Gestión de productos y proveedores.</li>
                             </ul>
                         </div>
                         <div class="resume-item">
-                            <h4>Graphic design specialist</h4>
-                            <h5>2017 - 2018</h5>
-                            <p><em>Stepping Stone Advertising, New York, NY</em></p>
+                            <h4>Desarrollador .NET</h4>
+                            <h5>2018 - 2019</h5>
+                            <p><em>Industrias Wald, Córdoba, Ver.</em></p>
                             <ul>
-                                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-                            </ul>
-                        </div>
-                        <div class="resume-item">
-                            <h4>Graphic design specialist</h4>
-                            <h5>2017 - 2018</h5>
-                            <p><em>Stepping Stone Advertising, New York, NY</em></p>
-                            <ul>
-                                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                                <li>Implementación de un sistema para el control de viáticos.</li>
+                                <li>Gestión de vendedores y vehículos que se le asignan.</li>
+                                <li>Gestión de clientes de cada uno de los vendedores.</li>
                             </ul>
                         </div>
                     </div>
